[package]
name = "easygpu"
version = "0.5.0"
description = "Simple wrapper around wgpu aiming to make some common operations easier"
repository = "https://github.com/khonsulabs/easygpu"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
license = "MIT"
readme = "./README.md"
edition = "2021"
keywords = ["graphics", "wgpu"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
figures = "0.5.0"
wgpu = "24.0"
num-traits = "0.2.19"
thiserror = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }

[dev-dependencies]
winit = { version = "0.29", features = ["rwh_05"] }